RESOLVED FIXED 158353
Miscellaneous IDBBindingUtilities cleanup
https://bugs.webkit.org/show_bug.cgi?id=158353
Summary Miscellaneous IDBBindingUtilities cleanup
Brady Eidson
Reported 2016-06-03 13:40:43 PDT
Miscellaneous IDBBindingUtilities cleanup
Attachments
Patch (31.03 KB, patch)
2016-06-03 13:51 PDT, Brady Eidson
thorton: review+
Brady Eidson
Comment 1 2016-06-03 13:51:23 PDT
Tim Horton
Comment 2 2016-06-03 14:29:54 PDT
Comment on attachment 280460 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=280460&action=review > Source/WebCore/ChangeLog:8 > + No new tests (Straight refactor, yo). Can't you test the new errors?
Brady Eidson
Comment 3 2016-06-03 14:39:14 PDT
(In reply to comment #2) > Comment on attachment 280460 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=280460&action=review > > > Source/WebCore/ChangeLog:8 > > + No new tests (Straight refactor, yo). > > Can't you test the new errors? Sadly, no. We know "ScriptExecutionContext without an ExecState" is a possibility, somehow, but it's not known to be purposefully triggerable... If I'm wrong and somebody lets me know, I'd happily add tests.
Brady Eidson
Comment 4 2016-06-03 14:41:09 PDT
Note You need to log in before you can comment on or make changes to this bug.