Source/WebCore/Modules/indexeddb/IDBFactory.cpp
@@ -144,11 +144,15 @@ RefPtr<IDBOpenDBRequest> IDBFactory::deleteDatabase(ScriptExecutionContext& cont
 
 short IDBFactory::cmp(ScriptExecutionContext& context, JSValue firstValue, JSValue secondValue, ExceptionCodeWithMessage& ec)
 {
-    RefPtr<IDBKey> first = scriptValueToIDBKey(context, firstValue);
-    RefPtr<IDBKey> second = scriptValueToIDBKey(context, secondValue);
+    auto exec = context.execState();
+    if (!exec) {
+        ec.code = IDBDatabaseException::UnknownError;
+        ec.message = ASCIILiteral("Failed to execute 'cmp' on 'IDBFactory': Script execution context does not have an execution state.");
+        return 0;
+    }
 
-    ASSERT(first);
-    ASSERT(second);
+    Ref<IDBKey> first = scriptValueToIDBKey(*exec, firstValue);
+    Ref<IDBKey> second = scriptValueToIDBKey(*exec, secondValue);
 
     if (!first->isValid() || !second->isValid()) {
         ec.code = IDBDatabaseException::DataError;
