Source/WebCore/Modules/indexeddb/IDBKey.cpp
@@ -51,29 +51,27 @@ bool IDBKey::isValid() const
     return true;
 }
 
-int IDBKey::compare(const IDBKey* other) const
+int IDBKey::compare(const IDBKey& other) const
 {
-    ASSERT(other);
-    if (m_type != other->m_type)
-        return m_type > other->m_type ? -1 : 1;
+    if (m_type != other.m_type)
+        return m_type > other.m_type ? -1 : 1;
 
     switch (m_type) {
     case KeyType::Array:
-        for (size_t i = 0; i < m_array.size() && i < other->m_array.size(); ++i) {
-            if (int result = m_array[i]->compare(other->m_array[i].get()))
+        for (size_t i = 0; i < m_array.size() && i < other.m_array.size(); ++i) {
+            if (int result = m_array[i]->compare(*other.m_array[i]))
                 return result;
         }
-        if (m_array.size() < other->m_array.size())
+        if (m_array.size() < other.m_array.size())
             return -1;
-        if (m_array.size() > other->m_array.size())
+        if (m_array.size() > other.m_array.size())
             return 1;
         return 0;
     case KeyType::String:
-        return -codePointCompare(other->m_string, m_string);
+        return -codePointCompare(other.m_string, m_string);
     case KeyType::Date:
     case KeyType::Number:
-        return (m_number < other->m_number) ? -1 :
-                (m_number > other-> m_number) ? 1 : 0;
+        return (m_number < other.m_number) ? -1 : ((m_number > other. m_number) ? 1 : 0);
     case KeyType::Invalid:
     case KeyType::Min:
     case KeyType::Max:
@@ -85,17 +83,13 @@ int IDBKey::compare(const IDBKey* other) const
     return 0;
 }
 
-bool IDBKey::isLessThan(const IDBKey* other) const
+bool IDBKey::isLessThan(const IDBKey& other) const
 {
-    ASSERT(other);
     return compare(other) == -1;
 }
 
-bool IDBKey::isEqual(const IDBKey* other) const
+bool IDBKey::isEqual(const IDBKey& other) const
 {
-    if (!other)
-        return false;
-
     return !compare(other);
 }
 
